# DRUMku

./: CMakeLists.txt  LICENSE  Makefile  README.md  build-from-source.sh
gui/: geometry.sh  make_background.sh  make_pads.sh
packaging/: drumku-0.1.0.recipe  drumku.PackageInfo  make-hpkg.sh
source/: drumcontroller.cpp  drumcontroller.h  drumfactory.cpp  drumgeometry.h  drumids.h  drumprocessor.cpp  drumprocessor.h  drumview.cpp  drumview.h  drumvoices.cpp  drumvoices.h  version.h  wavsample.cpp  wavsample.h
